--- a/styles/_mobile.scss
+++ b/styles/_mobile.scss
@@ -1,162 +1,208 @@
-@media (max-width:998px) {
-    span.mobile_toggle {
-        display: block;
-    }
-    header {
-        // border: 2px solid red;
-        justify-content: space-between;
-        // margin-left: 30px;
-        width: 100%;
-        padding: 5px 30px;
-        .menu {
-            display: none;
-            .menu__item {
-                // position: relative;
-                // margin: 0 10px 0 10px;
-                // p {
-                //     color: $white;
-                //     &::after {
-                //         content: url('/images/icon-arrow-light.svg');
-                //         width: 20px;
-                //         height: 20px;
-                //         margin-left: 10px;
-                //     }
-                // }
-                // ul {
-                //     //width: 55px;
-                //     position: absolute;
-                //     top: 25px;
-                //     left: -15px;
-                //     background: $white;
-                //     border-radius: 7px;
-                //     padding: 28px;
-                //     font-size: 15px;
-                //     display: none;
-                // }
-                // &:hover {
-                //     ul {
-                //         display: block;
-                //     }
-                // }
-            }
+    @media (max-width:998px) {
+        span.mobile_toggle {
+            display: block;
         }
-        .call_to_action {
-            display: none;
-            .login {
-                background: transparent;
-                color: $white;
-            }
-        }
-    }
-    .section1 {
-        width: 100%;
-        // text-align: center;
-        .section_heading {
-            top: 50px;
-        }
-        .section__content {
-            flex-direction: column-reverse;
-            width: 100%;
-            // border: 2px solid green;
-            // justify-content: center;
-            // margin-top: -50px;
-            margin: 20px 0;
-            .left {
-                text-align: center;
-                width: 100%;
-                margin: 5px auto;
-                padding: 5px;
-                position: relative;
-                left: 0;
-                div {
-                    margin-top: 70px;
+        header {
+            // border: 2px solid red;
+            justify-content: space-between;
+            // margin-left: 30px;
+            // width: 100%;
+            padding: 5px 30px;
+            .menu {
+                display: none;
+                .menu__item {
+                    // position: relative;
+                    // margin: 0 10px 0 10px;
+                    // p {
+                    //     color: $white;
+                    //     &::after {
+                    //         content: url('/images/icon-arrow-light.svg');
+                    //         width: 20px;
+                    //         height: 20px;
+                    //         margin-left: 10px;
+                    //     }
+                    // }
+                    // ul {
+                    //     //width: 55px;
+                    //     position: absolute;
+                    //     top: 25px;
+                    //     left: -15px;
+                    //     background: $white;
+                    //     border-radius: 7px;
+                    //     padding: 28px;
+                    //     font-size: 15px;
+                    //     display: none;
+                    // }
+                    // &:hover {
+                    //     ul {
+                    //         display: block;
+                    //     }
+                    // }
                 }
             }
-            .right {
-                width: 100%;
-                height: 400px;
-                margin: 50px auto 0 auto;
-                //border: 2px solid red;
-                position: relative;
-                left: 0;
-                background: url('/images/illustration-editor-desktop.svg');
-                background-position: 50% 50%;
-                background-size: contain;
-                background-repeat: no-repeat;
+            .call_to_action {
+                display: none;
+                .login {
+                    background: transparent;
+                    color: $white;
+                }
             }
         }
-    }
-    .section2 {
-        width: 100%;
-        flex-direction: column;
-        height: max-content;
-        margin-top: 50%;
-        padding: 0 20px 40px 20px;
-        .left {
+        .hero {
             width: 100%;
-            height: 200px;
-            // margin-top: -30%;
-            // height: fit-content;
-            background: url('/images/bg-pattern-circles.svg');
-            // background-position: bottom right;
-            background-size: cover;
-            background-repeat: no-repeat;
-            // border: 2px solid red;
-            img {
-                position: relative;
-                top: -60%;
-                left: 0px;
-                width: 100%;
-            }
-        }
-        .right {
-            text-align: center;
-            width: 80%;
-            // border: 2px solid red;
-            margin: -25px auto;
-            // align-self: center;
-            // padding-right: 20px;
-            color: $white;
-            // padding: 20px;
-            // margin-right: 60px;
-        }
-    }
-    .section3 {
-        .section__content {
-            text-align: center;
-            display: block;
-            width: 100%;
-            margin-top: -50px;
-            .left {
-                // border: 2px solid red;
-                width: 100%;
-                height: 400px;
-                position: relative;
-                left: 0;
-                margin: -30px auto;
-                background: url('/images/illustration-laptop-desktop.svg');
-                background-position: 50% 50%;
-                background-size: contain;
-                background-repeat: no-repeat;
-            }
-            .right {
-                text-align: center;
+            .info {
                 width: 90%;
-                margin: 10px auto;
-                position: relative;
-                left: 0;
-                div {
-                    margin-top: 70px;
+                color: $white;
+                margin: 50px auto;
+                padding: 30px 0;
+                h1 {
+                    font-size: 40px;
+                    margin-bottom: -5px;
+                }
+                p {
+                    margin: 30px;
+                    font-weight: 200;
+                }
+                .stfre {
+                    color: $lightred;
+                }
+                .l-mor {
+                    background: transparent;
+                    border: 1px solid $white;
+                    color: $white;
+                }
+            }
+        }
+        .section1 {
+            // width: 100%;
+            // text-align: center;
+            .section_heading {
+                top: 30px;
+            }
+            .section__content {
+                flex-direction: column-reverse;
+                // width: 100%;
+                // justify-content: center;
+                // margin-top: -50px;
+                margin: 20px 0;
+                .left {
+                    text-align: center;
+                    width: 80%;
+                    margin: 5px auto;
+                    padding: 5px;
+                    position: relative;
+                    left: 0;
+                    div {
+                        margin-top: 70px;
+                    }
+                }
+                .right {
+                    width: 80%;
+                    height: 400px;
+                    margin: 50px auto 0 auto;
+                    position: relative;
+                    left: 0;
+                    // background: url('/images/illustration-editor-desktop.svg');
+                    background-position: 50% 50%;
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                }
+            }
+        }
+        .section2 {
+            // width: 100%;
+            .section__content {
+                // border: 2px solid red;
+                // height: max-content;
+                height: fit-content !important;
+                flex-direction: column;
+                flex-wrap: nowrap;
+                justify-content: center;
+                align-items: center;
+                margin-top: 30%;
+                .left {
+                    text-align: center;
+                    width: 80%;
+                    // margin-top: -30%;
+                    // height: fit-content;
+                    background: url('/images/bg-pattern-circles.svg');
+                    background-position: -10px -100px;
+                    // background-size: 90%;
+                    // background-position: bottom right;
+                    background-size: cover;
+                    background-repeat: no-repeat;
+                    // border: 2px solid red;
+                    img {
+                        position: relative;
+                        top: -150px;
+                        left: 0;
+                        width: 80%;
+                    }
+                }
+                .right {
+                    text-align: center;
+                    // border: 2px solid greenyellow;
+                    width: 80%;
+                    position: relative;
+                    top: -100px;
+                    left: 0;
+                    // border: 2px solid red;
+                    margin: -25px auto;
+                    // align-self: center;
+                    // padding-right: 20px;
+                    color: $white;
+                    // padding: 20px;
+                    // margin-right: 60px;
+                }
+            }
+        }
+        .section3 {
+            margin-top: 50px;
+            .section__content {
+                overflow: hidden;
+                text-align: center;
+                display: block;
+                // width: 100%;
+                .left {
+                    width: 90%;
+                    height: 300px;
+                    position: relative;
+                    left: 0;
+                    margin: 5px auto;
+                    background: url('/images/illustration-laptop-desktop.svg');
+                    background-position: 50% 50%;
+                    background-size: 90%;
+                    background-repeat: no-repeat;
+                }
+                .right {
+                    text-align: center;
+                    width: 90%;
+                    margin: 0px auto;
+                    position: relative;
+                    left: 0;
+                    div {
+                        margin-top: 70px;
+                    }
+                }
+            }
+        }
+        footer {
+            // width: 100vw;
+            text-align: center;
+            margin-top: 50px;
+            .content {
+                display: block;
+                //align-items: center;
+                div:not(:first-child) {
+                    margin-top: 50px;
+                    // border: 2px solid red;
                 }
             }
         }
     }
-    footer {
-        width: 100vw;
-        text-align: center;
-        .content {
-            display: block;
-            //align-items: center;
+    
+    @media (min-width:1002px) {
+        .section2 {
+            height: 350px;
         }
     }
-}
